--- a/cv.tex
+++ b/cv.tex
@@ -82,9 +82,9 @@
 
 \textbf{Invited Talks:}
   \begin{enumerate}
-  \item "Gravitational Wave Data Analysis", North American Einstein Toolkit Workshop, July 29, 2021
-  \item “Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors”, Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
-  \item “Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors”, Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Champaign, IL, November 11, 2020
+  \item ``Gravitational Wave Data Analysis'', North American Einstein Toolkit Workshop, July 29, 2021
+  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
+  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Champaign, IL, November 11, 2020
   \end{enumerate}
 
   \textbf{Conference Presentations:}
@@ -189,7 +189,7 @@
   \textbf{Professional Service: }\\
   Co-organizer of UT Austin Theory Group Seminar\\
   Referee for Physical Review Letters, Physical Review D,  and General Relativity and Gravitation\\
-  Served as scribe for NASA Review Panel\\
+  Scribe for NASA Review Panel\\
   
 \end{flushleft}
 \end{document}
