Add petnica lecture

--- a/cv.tex
+++ b/cv.tex
@@ -82,6 +82,7 @@
 
 \textbf{Invited Talks:}
   \begin{enumerate}
+  \item ``Waveforms for Gravitational Wave Astronomy'', Lecture at Petnica Summer Institute, Valjevo, Serbia, August 9, 2022
   \item ``Gravitational Wave Data Analysis'', North American Einstein Toolkit Workshop, July 29, 2021
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Champaign, IL, November 11, 2020
