Add recent papers

--- a/cv.bib
+++ b/cv.bib
@@ -639,3 +639,25 @@ archivePrefix = {arXiv},
     month = "3",
     year = "2022"
 }
+
+@article{Ferguson:2022qkz,
+    author = "Ferguson, Deborah",
+    title = "{Optimizing the Placement of Numerical Relativity Simulations using a Mismatch Predicting Neural Network}",
+    eprint = "2209.15144",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "9",
+    year = "2022"
+}
+
+@article{LIGOScientific:2022enz,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Model-based cross-correlation search for gravitational waves from the low-mass X-ray binary Scorpius X-1 in LIGO O3 data}",
+    eprint = "2209.02863",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2100110-v11",
+    month = "9",
+    year = "2022"
+}
