--- a/cv.tex
+++ b/cv.tex
@@ -63,6 +63,7 @@
   \vspace{8px}
 	
   \textbf{Honors and Awards:}\\
+  2022 - Visualizing Science Competition (University of Texas at Austin)\\
   2021 - Third Place in Visualizing Science Competition (University of Texas at Austin)\\
   2020 - Larry S. O'Hara Graduate Student Fellowship (Georgia Institute of Technology)\\
   2020 - Amelio Award for Research Excellence (Georgia Institute of Technology)\\
@@ -82,6 +83,7 @@
 
 \textbf{Invited Talks:}
   \begin{enumerate}
+  \item ``Numerical Relativity with an Eye Toward Next Generation Gravitational Wave Detectors'', Seminar at Max Planck Institute, Albert Einstein Institute, Potsdam Germany, October 12, 2022 
   \item ``Waveforms for Gravitational Wave Astronomy'', Lecture at Petnica Summer Institute, Valjevo, Serbia, August 9, 2022
   \item ``Gravitational Wave Data Analysis'', North American Einstein Toolkit Workshop, July 29, 2021
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
@@ -106,6 +108,7 @@
 
   \textbf{Short Author Publications:}
   \begin{enumerate}  
+  	\item \fullcite{Ferguson:2022qkz}
 	\item \fullcite{Ferguson:2020xnm}
     \item \fullcite{Evans:2020lbq}
     \item \fullcite{Ferguson:2019slp}
@@ -125,6 +128,7 @@
   \textbf{Collaboration Publications:}
   \begin{enumerate}
   \setcounter{enumi}{\value{papers}}
+  \item \fullcite{LIGOScientific:2022enz}
   \item \fullcite{LIGOScientific:2022lsr}
   \item \fullcite{LIGOScientific:2022jpr}
   \item \fullcite{LIGOScientific:2022myk}  
@@ -181,7 +185,7 @@
   2020 - Generated visualizations for GW190521 announcement\\
   2019 - Atlanta Science Tavern Talk: Black holes wave back: observing the most violent events in the cosmos\\
   2018 - Served on Undergraduate Research Panel at Society of Women in Physics Conference\\
-  2017-2019 - Vertically Integrated Projects Mentor\\
+  2017-Present - Vertically Integrated Projects Mentor\\
   2017-2019 - Graduate Association of Physics Mentor\\
   2013-2016 - Presented at University of Kentucky Engineering Fair\\
 
