Update acceptance of paper

--- a/cv.tex
+++ b/cv.tex
@@ -83,14 +83,16 @@
 
 \textbf{Invited Talks:}
   \begin{enumerate}
-  \item ``Numerical Relativity with an Eye Toward Next Generation Gravitational Wave Detectors'', Seminar at Max Planck Institute, Albert Einstein Institute, Potsdam Germany, October 12, 2022 
-  \item ``Waveforms for Gravitational Wave Astronomy'', Lecture at Petnica Summer Institute, Valjevo, Serbia, August 9, 2022
+%  \item ``Binary Black Hole Numerical Relativity Codes'', American Physical Society April Meeting, Minneapolis, Minnesota, April 2023
+  \item ``Optimizing the Placement of Numerical Relativity Simulations using a Mismatch Predicting Neural Network'',  Webinar for the Simulating eXtreme Spacetimes Collaboration,  November 21, 2022
+  \item ``Numerical Relativity with an Eye Toward Next Generation Gravitational Wave Detectors'', Seminar at the Albert Einstein Institute, Potsdam Germany, October 12, 2022 
+  \item ``Waveforms for Gravitational Wave Astronomy'', Lecture for Petnica Summer Institute, August 9, 2022
   \item ``Gravitational Wave Data Analysis'', North American Einstein Toolkit Workshop, July 29, 2021
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Champaign, IL, November 11, 2020
   \end{enumerate}
 
-  \textbf{Conference Presentations:}
+  \textbf{Contributed Talks:}
   \begin{enumerate}
   \item D. Ferguson, ``Optimizing Numerical Relativity Placement using Neural Networks'', 14th International LISA Symposium, Virtual, July 2022
   \item D.Ferguson, ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY, April 2022
@@ -107,8 +109,10 @@
   \end{enumerate} 
 
   \textbf{Short Author Publications:}
-  \begin{enumerate}  
-  	\item \fullcite{Ferguson:2022qkz}
+  \begin{enumerate}      
+     \item Deborah Ferguson, Miguel Gracia-Linares, Erick Martinez, Lu Lu. ``Mayawaves: Python Library for Interacting with the Einstein Toolkit and the MAYA Catalog'', in prep
+     \item Deborah Ferguson, Maximillian Trostel, Miguel Gracia-Linares, Erick Martinez, Jacob Lange, Ryan Nowicki, Finny Valorz, Deirdre Shoemaker, and Pablo Laguna. ``MAYA Catalog of Binary Black Hole Numerical Relativity Waveforms'', in prep
+     \item \fullcite{Ferguson:2022qkz}, accepted to \textit{Phys. Rev. D}
 	\item \fullcite{Ferguson:2020xnm}
     \item \fullcite{Evans:2020lbq}
     \item \fullcite{Ferguson:2019slp}
@@ -192,6 +196,7 @@
   \vspace{8px}
 
   \textbf{Professional Service: }\\
+  Chair for APS April Meeting Session\\
   Co-organizer of UT Austin Theory Group Seminar\\
   Referee for Physical Review Letters, Physical Review D,  and General Relativity and Gravitation\\
   Scribe for NASA Review Panel\\
