Add chairing amaldi

--- a/cv.bib
+++ b/cv.bib
@@ -642,12 +642,17 @@ archivePrefix = {arXiv},
 
 @article{Ferguson:2022qkz,
     author = "Ferguson, Deborah",
-    title = "{Optimizing the Placement of Numerical Relativity Simulations using a Mismatch Predicting Neural Network}",
+    title = "{Optimizing the placement of numerical relativity simulations using a mismatch predicting neural network}",
     eprint = "2209.15144",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
-    month = "9",
-    year = "2022"
+    reportNumber = "UTWI-20-2022",
+    doi = "10.1103/PhysRevD.107.024034",
+    journal = "Phys. Rev. D",
+    volume = "107",
+    number = "2",
+    pages = "024034",
+    year = "2023"
 }
 
 @article{LIGOScientific:2022enz,
