--- a/cv.tex
+++ b/cv.tex
@@ -83,7 +83,7 @@
 
 \textbf{Invited Talks:}
   \begin{enumerate}
-%  \item ``Binary Black Hole Numerical Relativity Codes'', American Physical Society April Meeting, Minneapolis, Minnesota, April 2023
+  \item ``Binary Black Hole Numerical Relativity Codes'', American Physical Society April Meeting, Minneapolis, Minnesota, April 2023
   \item ``Optimizing the Placement of Numerical Relativity Simulations using a Mismatch Predicting Neural Network'',  Webinar for the Simulating eXtreme Spacetimes Collaboration,  November 21, 2022
   \item ``Numerical Relativity with an Eye Toward Next Generation Gravitational Wave Detectors'', Seminar at the Albert Einstein Institute, Potsdam Germany, October 12, 2022 
   \item ``Waveforms for Gravitational Wave Astronomy'', Lecture for Petnica Summer Institute, August 9, 2022
@@ -112,7 +112,7 @@
   \begin{enumerate}      
      \item Deborah Ferguson, Miguel Gracia-Linares, Erick Martinez, Lu Lu. ``Mayawaves: Python Library for Interacting with the Einstein Toolkit and the MAYA Catalog'', in prep
      \item Deborah Ferguson, Maximillian Trostel, Miguel Gracia-Linares, Erick Martinez, Jacob Lange, Ryan Nowicki, Finny Valorz, Deirdre Shoemaker, and Pablo Laguna. ``MAYA Catalog of Binary Black Hole Numerical Relativity Waveforms'', in prep
-     \item \fullcite{Ferguson:2022qkz}, accepted to \textit{Phys. Rev. D}
+     \item \fullcite{Ferguson:2022qkz}
 	\item \fullcite{Ferguson:2020xnm}
     \item \fullcite{Evans:2020lbq}
     \item \fullcite{Ferguson:2019slp}
@@ -196,7 +196,9 @@
   \vspace{8px}
 
   \textbf{Professional Service: }\\
-  Chair for APS April Meeting Session\\
+  Chair for Amaldi Conference on Gravitational Waves Session 2023\\
+  Member-at-large on Executive Committee of APS Division of Gravitational Physics\\
+  Chair for APS April Meeting Session 2022\\
   Co-organizer of UT Austin Theory Group Seminar\\
   Referee for Physical Review Letters, Physical Review D,  and General Relativity and Gravitation\\
   Scribe for NASA Review Panel\\
