--- a/cv.tex
+++ b/cv.tex
@@ -15,8 +15,8 @@
 %\bibliographystyle{unsrt}	
 \begin{center}
   \textbf{DEBORAH FERGUSON}\\
-  School of Physics, Center for Gravitational Physics\\
-  University of Texas at Austin\\
+  Department of Physics, Illinois Center for Advanced Studies of the Universe\\
+  University of Illinois Urbana-Champaign\\
 \end{center}  
 
 \begin{flushleft}
@@ -34,8 +34,15 @@
 
   \textbf{Research Positions:}\\
   \vspace{4px}
+  
+  \textit{Postdoctoral Fellow} \hfill \textit{2023-Present} \\
+  University of Illinois Urbana-Champaign\\
+  Research focus: Numerical relativity with a eye toward next generation detectors\\
+  Advisor: Helvi Witek\\
+  
+ \vspace{8px}  
  
-  \textit{Postdoctoral Fellow} \hfill \textit{2021-Present} \\
+  \textit{Postdoctoral Fellow} \hfill \textit{2021-2023} \\
   University of Texas at Austin\\
   Research focus: Optimizing the use of numerical relativity with next generation\\ gravitational wave detectors\\
   Advisor: Deirdre Shoemaker\\
