update with papers

--- a/cv.bib
+++ b/cv.bib
@@ -666,3 +666,23 @@ archivePrefix = {arXiv},
     month = "9",
     year = "2022"
 }
+
+@article{Ferguson:2023vta,
+    author = "Ferguson, Deborah and others",
+    title = "{Second MAYA Catalog of Binary Black Hole Numerical Relativity Waveforms}",
+    eprint = "2309.00262",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "9",
+    year = "2023"
+}
+
+@article{Ferguson:2023mks,
+    author = "Ferguson, Deborah and others",
+    title = "{Mayawaves: Python Library for Interacting with the Einstein Toolkit and the MAYA Catalog}",
+    eprint = "2309.00653",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.IM",
+    month = "9",
+    year = "2023"
+}
