--- a/cv.tex
+++ b/cv.tex
@@ -21,7 +21,7 @@
 
 \begin{flushleft}
 
-  Email: deborah.ferguson@austin.utexas.edu\\
+  Email: dferg@illinois.edu\\
   Webpage: deborahferguson.info\\
   \vspace{8px}
   
@@ -117,9 +117,9 @@
 
   \textbf{Short Author Publications:}
   \begin{enumerate}      
-     \item Deborah Ferguson, Miguel Gracia-Linares, Erick Martinez, Lu Lu. ``Mayawaves: Python Library for Interacting with the Einstein Toolkit and the MAYA Catalog'', in prep
-     \item Deborah Ferguson, Maximillian Trostel, Miguel Gracia-Linares, Erick Martinez, Jacob Lange, Ryan Nowicki, Finny Valorz, Deirdre Shoemaker, and Pablo Laguna. ``MAYA Catalog of Binary Black Hole Numerical Relativity Waveforms'', in prep
-     \item \fullcite{Ferguson:2022qkz}
+    \item \fullcite{Ferguson:2023vta}
+    \item \fullcite{Ferguson:2023mks}
+    \item \fullcite{Ferguson:2022qkz}
 	\item \fullcite{Ferguson:2020xnm}
     \item \fullcite{Evans:2020lbq}
     \item \fullcite{Ferguson:2019slp}
@@ -196,13 +196,14 @@
   2020 - Generated visualizations for GW190521 announcement\\
   2019 - Atlanta Science Tavern Talk: Black holes wave back: observing the most violent events in the cosmos\\
   2018 - Served on Undergraduate Research Panel at Society of Women in Physics Conference\\
-  2017-Present - Vertically Integrated Projects Mentor\\
+  2017-2023 - Vertically Integrated Projects Mentor\\
   2017-2019 - Graduate Association of Physics Mentor\\
   2013-2016 - Presented at University of Kentucky Engineering Fair\\
 
   \vspace{8px}
 
   \textbf{Professional Service: }\\
+  DGRAV Executive Committee Member at Large 2023\\
   Chair for Amaldi Conference on Gravitational Waves Session 2023\\
   Member-at-large on Executive Committee of APS Division of Gravitational Physics\\
   Chair for APS April Meeting Session 2022\\
