--- a/cv.bib
+++ b/cv.bib
@@ -347,16 +347,20 @@ archivePrefix = {arXiv},
     year = "2021"
 }
 
-@article{LIGOScientific:2021odm,
-    author ={{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, Virgo, KAGRA",
-    title = "{Constraints on dark photon dark matter using data from LIGO's and Virgo's third observing run}",
+@article{LIGOScientific:2021ffg,
+    author = "Abbott, R. and others",
+    collaboration = "LIGO Scientific, KAGRA, Virgo",
+    title = "{Constraints on dark photon dark matter using data from LIGO\textquoteright{}s and Virgo\textquoteright{}s third observing run}",
     eprint = "2105.13085",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.CO",
     reportNumber = "LIGO-P2100098",
-    month = "5",
-    year = "2021"
+    doi = "10.1103/PhysRevD.105.063030",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "6",
+    pages = "063030",
+    year = "2022"
 }
 
 @article{LIGOScientific:2021qlt,
@@ -436,16 +440,19 @@ archivePrefix = {arXiv},
 }
 
 @article{LIGOScientific:2021ozr,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    author = "Abbott, R. and others",
     collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Search for continuous gravitational waves from 20 accreting millisecond X-ray pulsars in O3 LIGO data}",
+    title = "{Search for continuous gravitational waves from 20 accreting millisecond
+x-ray pulsars in O3 LIGO data}",
     eprint = "2109.09255",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2100221",
     doi = "10.1103/PhysRevD.105.022002",
-    month = "9",
-    year = "2021"
+    journal = "Phys. Rev. D",
+    volume = "105",
+    pages = "022002",
+    year = "2022"
 }
 
 @article{LIGOScientific:2021job,
@@ -544,17 +551,20 @@ archivePrefix = {arXiv},
     year = "2021"
 }
 
-@article{LIGOScientific:2021jlr,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+@article{LIGOScientific:2021rnv,
+    author = "Abbott, R. and others",
+    collaboration = "LIGO Scientific, Virgo, KAGRA",
     title = "{All-sky search for gravitational wave emission from scalar boson clouds around spinning black holes in LIGO O3 data}",
     eprint = "2111.15507",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "P2100343",
     doi = "10.1103/PhysRevD.105.102001",
-    month = "11",
-    year = "2021"
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "10",
+    pages = "102001",
+    year = "2022"
 }
 
 @article{LIGOScientific:2021sio,
@@ -570,15 +580,19 @@ archivePrefix = {arXiv},
 }
 
 @article{LIGOScientific:2021quq,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Narrowband searches for continuous and long-duration transient gravitational waves from known pulsars in the LIGO-Virgo third observing run}",
+    author = "Abbott, R. and others",
+    collaboration = "LIGO Scientific, KAGRA, VIRGO",
+    title = "{Narrowband Searches for Continuous and Long-duration Transient Gravitational Waves from Known Pulsars in the LIGO-Virgo Third Observing Run}",
     eprint = "2112.10990",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2100267",
-    month = "12",
-    year = "2021"
+    doi = "10.3847/1538-4357/ac6ad0",
+    journal = "Astrophys. J.",
+    volume = "932",
+    number = "2",
+    pages = "133",
+    year = "2022"
 }
 
 @article{LIGOScientific:2022pjk,
@@ -628,15 +642,19 @@ archivePrefix = {arXiv},
     year = "2022"
 }
 
-@article{LIGOScientific:2022myk,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{First joint observation by the underground gravitational-wave detector, KAGRA, with GEO600}",
+@article{KAGRA:2022twx,
+    author = "Abbott, R. and others",
+    collaboration = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    title = "{First joint observation by the underground gravitational-wave detector KAGRA with GEO 600}",
     eprint = "2203.01270",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2100286",
-    month = "3",
+    doi = "10.1093/ptep/ptac073",
+    journal = "PTEP",
+    volume = "2022",
+    number = "6",
+    pages = "063F01",
     year = "2022"
 }
 
@@ -685,4 +703,89 @@ archivePrefix = {arXiv},
     primaryClass = "astro-ph.IM",
     month = "9",
     year = "2023"
+}
+
+@software{Ferguson_mayawaves_2023,
+author = {Ferguson, Deborah and Anne, Surendra and Gracia-Linares, Miguel and Iglesias, Hector and Jan, Aasim and Martinez, Erick and Lu, Lu and Meoni, Filippo and Nowicki, Ryan and Trostel, Max and Tsao, Bing-Jyun and Valorz, Finny},
+doi = {10.5281/zenodo.10035526},
+month = oct,
+title = {{mayawaves}},
+url = {https://github.com/MayaWaves/mayawaves},
+version = {v2023.10},
+year = {2023}
+}
+
+@article{FermiGamma-rayBurstMonitorTeam:2023gjw,
+    author = {{Fermi Gamma-ray Burst Monitor Team, LIGO Scientific, VIRGO, KAGRA Collaborations}},
+    collaboration = "Fermi Gamma-ray Burst Monitor Team, LIGO Scientific, VIRGO, KAGRA",
+    title = "{A Joint Fermi-GBM and Swift-BAT Analysis of Gravitational-Wave Candidates from the Third Gravitational-wave Observing Run}",
+    eprint = "2308.13666",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    month = "8",
+    year = "2023"
+}
+
+@article{LIGOScientific:2023lpe,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for Eccentric Black Hole Coalescences during the Third Observing Run of LIGO and Virgo}",
+    eprint = "2308.03822",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2300080",
+    month = "8",
+    year = "2023"
+}
+
+@article{LIGOScientific:2023bwz,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for gravitational-lensing signatures in the full third observing run of the LIGO-Virgo network}",
+    eprint = "2304.08393",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2200031",
+    month = "4",
+    year = "2023"
+}
+
+@article{KAGRA:2023pio,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, VIRGO, LIGO Scientific",
+    title = "{Open Data from the Third Observing Run of LIGO, Virgo, KAGRA, and GEO}",
+    eprint = "2302.03676",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "LIGO-P2200316",
+    doi = "10.3847/1538-4365/acdc9f",
+    journal = "Astrophys. J. Suppl.",
+    volume = "267",
+    number = "2",
+    pages = "29",
+    year = "2023"
+}
+
+@article{LIGOScientific:2022hai,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for subsolar-mass black hole binaries in the second part of Advanced LIGO's and Advanced Virgo's third observing run}",
+    eprint = "2212.01477",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "https://dcc.ligo.org/P2200139",
+    month = "12",
+    year = "2022"
+}
+
+@article{LIGOScientific:2022sts,
+    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+    title = "{Search for gravitational-wave transients associated with magnetar bursts in Advanced LIGO and Advanced Virgo data from the third observing run}",
+    eprint = "2210.10931",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2100387",
+    month = "10",
+    year = "2022"
 }
