--- a/cv.tex
+++ b/cv.tex
@@ -37,7 +37,7 @@
   
   \textit{Postdoctoral Fellow} \hfill \textit{2023-Present} \\
   University of Illinois Urbana-Champaign\\
-  Research focus: Numerical relativity with a eye toward next generation detectors\\
+  Research focus: Numerical relativity with an eye toward next generation detectors\\
   Advisor: Helvi Witek\\
   
  \vspace{8px}  
@@ -78,6 +78,7 @@
   2016 - Georgia Tech Institute Fellowship (Georgia Institute of Technology)\\
   2016 - Outstanding Senior in Physics (University of Kentucky)\\
   2015 - Oswald Award Honorable Mention (University of Kentucky)\\
+  \vspace{2px}
   2015 - First Place in University of Kentucky ACM Chapter Algorithmic Programming Competition\\ 
   \hspace{29px} (University of Kentucky)\\
   2015 - Summer Research Grant (University of Kentucky)\\
@@ -88,23 +89,62 @@
 
 \vspace{8px}
 
+  \textbf{Teaching:}\\
+  Spring 2018 - Head TA for Introductory Physics I\\
+  Fall 2017 - TA for Honors Introductory Physics II\\
+  Summer 2017 - TA for Online Introductory Physics I\\
+  Spring 2017 - TA for Introductory Physics II\\
+  Fall 2017 - TA for Introductory Physics I\\
+ 
+  \vspace{8px}   
+ 
+  \textbf{Education and Public Outreach:}\\
+  2017-2023 - Vertically Integrated Projects Mentor\\
+  2022 - Lakeway Breakfast Club Talk\\
+  2021 - Generated visualizations for LVK announcement of Black-Hole Neutron-Star mergers\\
+  2020 - Generated visualizations for LVK announcement of Intermediate Mass Black Hole merger\\
+  2019 - Atlanta Science Tavern Talk\\
+  2018 - Served on Undergraduate Research Panel at the Conference for Undergraduate Women in Physics\\
+  2017-2019 - Graduate Association of Physics Mentor\\
+  2013-2016 - Presented at University of Kentucky Engineering Fair\\
+
+  \vspace{8px}
+
+  \textbf{Leadership and Professional Service: }\\
+  2023-Present - Member-at-large on Executive Committee of APS Division of Gravitational Physics\\
+  2020-2023 - LISA Working Group White Paper Coordinator for Accuracy and Numerical Relativity\\ \hspace{58px}Sections \\
+  2023 - Chair for Amaldi Conference on Gravitational Waves Session\\
+  2022 - Chair for APS April Meeting Session\\
+  2021-2023 - Co-organizer of UT Austin Theory Group Seminar\\
+  Referee for Physical Review Letters, Physical Review D,  and General Relativity and Gravitation\\
+  Scribe for NASA Review Panel\\
+  
+  \vspace{8px}
+  
+  \textbf{Open-Source Software:}\\
+  \fullcite{Ferguson_mayawaves_2023}\\
+  
+  \vspace{8px}
+
 \textbf{Invited Talks:}
   \begin{enumerate}
+  \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation'', Seminar at the University of Illinois Urbana-Champaign, Urbana, IL, October 25, 2023
+  \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation'', Seminar at Cornell, Ithaca, NY, October 18, 2023
   \item ``Binary Black Hole Numerical Relativity Codes'', American Physical Society April Meeting, Minneapolis, Minnesota, April 2023
   \item ``Optimizing the Placement of Numerical Relativity Simulations using a Mismatch Predicting Neural Network'',  Webinar for the Simulating eXtreme Spacetimes Collaboration,  November 21, 2022
   \item ``Numerical Relativity with an Eye Toward Next Generation Gravitational Wave Detectors'', Seminar at the Albert Einstein Institute, Potsdam Germany, October 12, 2022 
   \item ``Waveforms for Gravitational Wave Astronomy'', Lecture for Petnica Summer Institute, August 9, 2022
   \item ``Gravitational Wave Data Analysis'', North American Einstein Toolkit Workshop, July 29, 2021
   \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
-  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Champaign, IL, November 11, 2020
+  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Urbana, IL, November 11, 2020
   \end{enumerate}
 
   \textbf{Contributed Talks:}
   \begin{enumerate}
   \item D. Ferguson, ``Optimizing Numerical Relativity Placement using Neural Networks'', 14th International LISA Symposium, Virtual, July 2022
-  \item D.Ferguson, ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY, April 2022
-  \item D.Ferguson, D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual, July 2021
-  \item D.Ferguson,  D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual, April 2021
+  \item D. Ferguson, ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY, April 2022
+  \item D. Ferguson, D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual, July 2021
+  \item D. Ferguson,  D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual, April 2021
   \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for LISA'', 13th International LISA Symposium, Virtual, September 2020
   \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', American Physical Society April Meeting, Virtual, April 2020
   \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the American Astronomical Society, Honolulu HI, January 2020
@@ -112,8 +152,10 @@
   \item D. Ferguson, K. Jani, D. Shoemaker, poster, ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany, May 2019
   \item D. Ferguson, et al., ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH, April 2018
   \item D. Ferguson, et al., ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA, October 2017
-  \item C. Powell, D. Ferguson, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY, April 2014
+  \item D. Ferguson, C. Powell, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY, April 2014
   \end{enumerate} 
+
+\newpage
 
   \textbf{Short Author Publications:}
   \begin{enumerate}      
@@ -131,6 +173,7 @@
   \textbf{Collaboration Publications with Direct Involvement:}  
   \begin{enumerate}
   \setcounter{enumi}{\value{papers}}
+  \item Ak\c{c}ay et al., ``Waveform Modelling for the Laser Interferometer Space Antenna'' (Nov. 2023)
   \item \fullcite{LIGOScientific:2021sio}
   \item \fullcite{LIGOScientific:2020tif}	
   \setcounter{papers}{\value{enumi}}
@@ -139,14 +182,20 @@
   \textbf{Collaboration Publications:}
   \begin{enumerate}
   \setcounter{enumi}{\value{papers}}
+  \item \fullcite{FermiGamma-rayBurstMonitorTeam:2023gjw}
+  \item \fullcite{LIGOScientific:2023lpe}
+  \item \fullcite{LIGOScientific:2023bwz}
+  \item \fullcite{KAGRA:2023pio}
+  \item \fullcite{LIGOScientific:2022hai}
+  \item \fullcite{LIGOScientific:2022sts}
   \item \fullcite{LIGOScientific:2022enz}
   \item \fullcite{LIGOScientific:2022lsr}
   \item \fullcite{LIGOScientific:2022jpr}
-  \item \fullcite{LIGOScientific:2022myk}  
+  \item \fullcite{KAGRA:2022twx}  
   \item \fullcite{LIGOScientific:2022cgf}
   \item \fullcite{LIGOScientific:2022pjk}
   \item \fullcite{LIGOScientific:2021quq}
-  \item \fullcite{LIGOScientific:2021jlr}
+  \item \fullcite{LIGOScientific:2021rnv}
   \item \fullcite{LIGOScientific:2021inr}
   \item \fullcite{LIGOScientific:2021hvc}
   \item \fullcite{LIGOScientific:2021psn}
@@ -161,7 +210,7 @@
   \item \fullcite{KAGRA:2021tnv}
   \item \fullcite{KAGRA:2021una}
   \item \fullcite{LIGOScientific:2021qlt}
-  \item \fullcite{LIGOScientific:2021odm}
+  \item \fullcite{LIGOScientific:2021ffg}
   \item \fullcite{LIGOScientific:2021mwx}
   \item \fullcite{Abbott:2021iab}
   \item \fullcite{LIGOScientific:2021yby}
@@ -180,36 +229,6 @@
   \item \fullcite{Abbott:2019ebz}
   \item \fullcite{Salemi:2019ovz}
   \end{enumerate}
-  
-  \textbf{Teaching:}\\
-  Spring 2018 - Head TA for Introductory Physics I\\
-  Fall 2017 - TA for Honors Introductory Physics II\\
-  Summer 2017 - TA for Online Introductory Physics I\\
-  Spring 2017 - TA for Introductory Physics II\\
-  Fall 2017 - TA for Introductory Physics I\\
- 
-  \vspace{8px}   
- 
-  \textbf{Leadership and Outreach:}\\
-  2022 - Talk at Lakeway Men's Breakfast Club\\
-  2021 - Generated visualizations for LVC announcement of Black-Hole Neutron-Star mergers\\
-  2020 - Generated visualizations for GW190521 announcement\\
-  2019 - Atlanta Science Tavern Talk: Black holes wave back: observing the most violent events in the cosmos\\
-  2018 - Served on Undergraduate Research Panel at Society of Women in Physics Conference\\
-  2017-2023 - Vertically Integrated Projects Mentor\\
-  2017-2019 - Graduate Association of Physics Mentor\\
-  2013-2016 - Presented at University of Kentucky Engineering Fair\\
-
-  \vspace{8px}
-
-  \textbf{Professional Service: }\\
-  DGRAV Executive Committee Member at Large 2023\\
-  Chair for Amaldi Conference on Gravitational Waves Session 2023\\
-  Member-at-large on Executive Committee of APS Division of Gravitational Physics\\
-  Chair for APS April Meeting Session 2022\\
-  Co-organizer of UT Austin Theory Group Seminar\\
-  Referee for Physical Review Letters, Physical Review D,  and General Relativity and Gravitation\\
-  Scribe for NASA Review Panel\\
   
 \end{flushleft}
 \end{document}
