Add LISA WG Whitepaper

--- a/cv.bib
+++ b/cv.bib
@@ -789,3 +789,14 @@ year = {2023}
     month = "10",
     year = "2022"
 }
+
+@article{LISAConsortiumWaveformWorkingGroup:2023arg,
+    author = "Afshordi, Niaesh and others",
+    collaboration = "LISA Consortium Waveform Working Group",
+    title = "{Waveform Modelling for the Laser Interferometer Space Antenna}",
+    eprint = "2311.01300",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "11",
+    year = "2023"
+}
