--- a/cv.tex
+++ b/cv.tex
@@ -173,7 +173,7 @@
   \textbf{Collaboration Publications with Direct Involvement:}  
   \begin{enumerate}
   \setcounter{enumi}{\value{papers}}
-  \item Ak\c{c}ay et al., ``Waveform Modelling for the Laser Interferometer Space Antenna'' (Nov. 2023)
+  \item \fullcite{LISAConsortiumWaveformWorkingGroup:2023arg}
   \item \fullcite{LIGOScientific:2021sio}
   \item \fullcite{LIGOScientific:2020tif}	
   \setcounter{papers}{\value{enumi}}
